# GameplaySystem

./: CMakeLists.txt
GameplaySystem/: CMakeLists.txt  File.proto  GameplaySystem.proto  Proto.h
GameplaySystem/Test/: CMakeLists.txt  FileTest.h
Proto/: CMakeLists.txt  File.proto  Proto.h
Proto/Test/: CMakeLists.txt  FileTest.cpp  FileTest.h  main.cpp
